NewsletterSetup: ensure svg icons are centered, improve spacing

--- a/client/components/site-icon-with-picker/style.scss
+++ b/client/components/site-icon-with-picker/style.scss
@@ -28,7 +28,7 @@ button.components-button.site-icon-with-picker__upload-button {
 	position: relative;
 	border: 1px dashed var( --studio-gray-60 );
 	background-size: contain;
-	margin-bottom: 40px;
+	margin-bottom: 30px;
 
 	&.has-icon-or-image {
 		border: none;
@@ -45,17 +45,17 @@ button.components-button.site-icon-with-picker__upload-button {
 		border-radius: $icon-border-radius;
 	}
 	svg {
-		width: $icon-size;
-		height: $icon-size;
-		padding: 26px;
-		box-sizing: border-box;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate( -50%, -50% );
 	}
 	span {
 		position: absolute;
 		width: 200px;
 		display: block;
 		text-align: center;
-		margin-top: 10px;
+		margin-top: 50px;
 		margin-left: -75%;
 	}
 }
@@ -89,8 +89,9 @@ button.components-button.site-icon-with-picker__upload-button {
 
 				.drop-zone__content-icon {
 					transform: translateX( -50% ) scale( 1.05 );
+
 					svg {
-						transform: scale( 1.3 );
+						transform: translate( -50%, -50% ) scale( 1.3 );
 				 	}
 				}
 			}
@@ -106,13 +107,15 @@ button.components-button.site-icon-with-picker__upload-button {
 		border: 1px solid var( --studio-gray-10 );
 		border-radius: $icon-border-radius;
 		transition: ease 1s;
+		width: $icon-size;
+		height: $icon-size;
 
 		svg {
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate( -50%, -50% );
 			fill: #fff;
-			width: $icon-size;
-			height: $icon-size;
-			padding: 26px;
-			box-sizing: border-box;
 			transition: ease 1s;
 		}
 	}
